# api/public/schema/openapi.yaml
@@ -12,7 +12,7 @@ info:
     - Docker Image: [online](https://hub.docker.com/repository/docker/conduction/pc-php) 
     - Datamodel: [postman](/schema/pan.postman_collection.json) / [oas](/schema/openapi.yaml) / [pdf](/schema/datamodel.pdf) / [modelio (zip)](/schema/Datamodel_Modelio.zip) 
     
-    "Naast deze JSON rest API is er ook een [graphql](/graphql) interface beschikbaar."         
+    Naast deze JSON rest API is er ook een [graphql](/graphql) interface beschikbaar.         
     
 paths:
   /audit_trails:
@@ -2391,12 +2391,12 @@ definitions:
         description: 'The moment this request was created'
         type: string
         format: date-time
-        example: '2020-10-19 12:00:03'
+        example: '2020-10-20 14:00:45'
       dateModified:
         description: 'The moment this request last Modified'
         type: string
         format: date-time
-        example: '2020-10-19 12:00:03'
+        example: '2020-10-20 14:00:45'
     required: []
   AuditTrail-write:
     properties:
@@ -2444,12 +2444,12 @@ definitions:
         description: 'The moment this request was created'
         type: string
         format: date-time
-        example: '2020-10-19 12:00:03'
+        example: '2020-10-20 14:00:45'
       dateModified:
         description: 'The moment this request last Modified'
         type: string
         format: date-time
-        example: '2020-10-19 12:00:03'
+        example: '2020-10-20 14:00:45'
     required: []
   ChangeLog-write:
     properties:
@@ -2490,8 +2490,8 @@ securityDefinitions:
 host: irc.zaakonline.nl
 servers:
   -
-    name: westfriesland.commonground.nu
-    url: pan.dev.westfriesland.commonground.nu
+    name: zuid-drecht.nl
+    url: pan.dev.zuid-drecht.nl
 externalDocs:
   -
     description: 'OAS Documentatie'
